--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece - Official Fan Website</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="logotop1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="logotop1.png">
+    <link rel="apple-touch-icon" sizes="300x300" href="logotop1.png">  
     <style>
        /* Global Styles */
 * {
